# mini-etl-crm

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  docker-compose.yml  pyproject.toml
data/: crm_delta_2026-06-02.json  crm_full_2026-06-01.json
migrations/: env.py
scripts/: preflight.sh  run_api.py  run_worker.py
server/: app.py  celery_app.py  config.py  database.py  logging_setup.py
server/etl/: api.py  models.py  pipeline.py  schemas.py  tasks.py
tests/: conftest.py  test_pipeline.py
