[tool.poetry]
name = "mini-etl-crm"
version = "0.1.0"
description = "Exercice pair pro — Mini-ETL CRM (Senior Backend Engineer)"
authors = ["Recrutement SecondBrain <engineering@sbrain.io>"]
package-mode = false

# Versions calées sur le monolith de production (monolith-back) pour que
# l'exercice se déroule sur la stack réelle.
[tool.poetry.dependencies]
python = ">=3.11,<3.12"
Flask = "3.0.3"
flask-pydantic = "^0.12.0"
pydantic = "^2.7"
pydantic-settings = "^2.7"
SQLAlchemy = "2.0.29"
alembic = "1.13.1"
psycopg2-binary = "2.9.9"
celery = "5.4.0"
kombu = "5.3.7"
redis = "5.0.3"
pandas = "2.2.2"
structlog = "^25.2.0"
gunicorn = "22.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-mock = "^3.14.0"
ruff = "0.8.2"
mypy = "1.11.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# --- Outillage (mêmes choix que le monolith) ---
[tool.ruff]
line-length = 78

[tool.ruff.lint]
extend-select = ["UP", "SIM", "PTH", "I"]

[tool.mypy]
disallow_untyped_defs = true
check_untyped_defs = true
plugins = ["pydantic.mypy"]
exclude = ["tests", "migrations"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
pythonpath = ["."]
